--- a/themes/default/index.hbs
+++ b/themes/default/index.hbs
@@ -1,4 +1,12 @@
 <body>
-  <h1>{{ title }}</h1>
+
+  {{!-- Load Headers --}}
+  {{> header}}
+  {{!-- ------------ --}}
+
+  {{!-- Content --}}
   <p>This is a description for this test page.</p>
+  {{!-- Content End --}}
+
+  {{!-- Load Footer --}}
 </body>
