--- a/themes/default/components/header.hbs
+++ b/themes/default/components/header.hbs
@@ -1,1 +1,32 @@
-<h1>{{ title }}</h1>
+<nav class="navbar navbar-expand-lg navbar-light bg-white">
+    <div class="container-fluid p-3">
+        <a class="navbar-brand font-weight-bold" href="#">{{ site.name }}</a>
+        <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+            aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+        </button>
+        <div class="collapse navbar-collapse" id="navbarSupportedContent">
+            <ul class="navbar-nav mr-auto mb-2 mb-lg-0">
+                <li class="nav-item">
+                    <a class="nav-link active" aria-current="page" href="#">Home</a>
+                </li>
+                <li class="nav-item">
+                    <a class="nav-link" href="#">About</a>
+                </li>
+                <li class="nav-item dropdown">
+                    <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+                        data-toggle="dropdown" aria-expanded="false">
+                        Parent Page
+                    </a>
+                    <ul class="dropdown-menu" aria-labelledby="navbarDropdown">
+                        <li><a class="dropdown-item" href="#">Sub Page</a></li>
+                    </ul>
+                </li>
+            </ul>
+            <form class="d-flex" action="#">
+                <input class="form-control form-control-lg mr-2" type="search" placeholder="Search" aria-label="Search">
+                <button class="btn btn-primary btn-lg" type="submit">Search</button>
+            </form>
+        </div>
+    </div>
+</nav>
