--- a/themes/default/index.hbs
+++ b/themes/default/index.hbs
@@ -1,12 +1,52 @@
-<body>
-
-  {{!-- Load Headers --}}
-  {{> header}}
-  {{!-- ------------ --}}
-
-  {{!-- Content --}}
-  <p>This is a description for this test page.</p>
-  {{!-- Content End --}}
-
-  {{!-- Load Footer --}}
-</body>
+<section class="container">
+    <div class="row">
+        <div class="col-12 text-center my-5">
+            <p class="font-weight-bold">Welcome To</p>
+            <h1 class="display-1">{{ title }}</h1>
+        </div>
+        <div class="col-12 my-5">
+            <div class="row">
+                <div class="col-md-6">
+                    <div class="card card-body bg-primary my-3 border-0 p-5">
+                        <div class="row">
+                            <div class="col-2">
+                                <svg class="bi bi-blockquote-left" width="3em" height="3em" viewBox="0 0 16 16"
+                                    fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd"
+                                        d="M2 3.5a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5zm5 3a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5zm0 3a.5.5 0 0 1 .5-.5h6a.5.5 0 0 1 0 1h-6a.5.5 0 0 1-.5-.5zm-5 3a.5.5 0 0 1 .5-.5h11a.5.5 0 0 1 0 1h-11a.5.5 0 0 1-.5-.5z" />
+                                    <path
+                                        d="M3.734 6.352a6.586 6.586 0 0 0-.445.275 1.94 1.94 0 0 0-.346.299 1.38 1.38 0 0 0-.252.369c-.058.129-.1.295-.123.498h.282c.242 0 .431.06.568.182.14.117.21.29.21.521a.697.697 0 0 1-.187.463c-.12.14-.289.21-.503.21-.336 0-.577-.108-.721-.327C2.072 8.619 2 8.328 2 7.969c0-.254.055-.485.164-.692.11-.21.242-.398.398-.562.16-.168.33-.31.51-.428.18-.117.33-.213.451-.287l.211.352zm2.168 0a6.588 6.588 0 0 0-.445.275 1.94 1.94 0 0 0-.346.299c-.113.12-.199.246-.257.375a1.75 1.75 0 0 0-.118.492h.282c.242 0 .431.06.568.182.14.117.21.29.21.521a.697.697 0 0 1-.187.463c-.12.14-.289.21-.504.21-.335 0-.576-.108-.72-.327-.145-.223-.217-.514-.217-.873 0-.254.055-.485.164-.692.11-.21.242-.398.398-.562.16-.168.33-.31.51-.428.18-.117.33-.213.451-.287l.211.352z" />
+                                </svg>
+                            </div>
+                            <div class="col-10">
+                                <p class="h5">70+ example pages</p>
+                                <p>You get 70+ pre-built pages for a variety of purposes that makes it the ideal point
+                                    to start building websites of any kind.</p>
+                                <p class="font-weight-bold"><i>9:00 AM -- 5:00 PM</i></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="col-md-6">
+                    <div class="card card-body bg-secondary my-3 border-0 p-5">
+                        <div class="row">
+                            <div class="col-2">
+                                <svg class="bi bi-question-circle-fill" width="3em" height="3em" viewBox="0 0 16 16"
+                                    fill="currentColor" xmlns="http://www.w3.org/2000/svg">
+                                    <path fill-rule="evenodd"
+                                        d="M16 8A8 8 0 1 1 0 8a8 8 0 0 1 16 0zM6.57 6.033H5.25C5.22 4.147 6.68 3.5 8.006 3.5c1.397 0 2.673.73 2.673 2.24 0 1.08-.635 1.594-1.244 2.057-.737.559-1.01.768-1.01 1.486v.355H7.117l-.007-.463c-.038-.927.495-1.498 1.168-1.987.59-.444.965-.736.965-1.371 0-.825-.628-1.168-1.314-1.168-.901 0-1.358.603-1.358 1.384zm1.251 6.443c-.584 0-1.009-.394-1.009-.927 0-.552.425-.94 1.01-.94.609 0 1.028.388 1.028.94 0 .533-.42.927-1.029.927z" />
+                                </svg>
+                            </div>
+                            <div class="col-10">
+                                <p class="h5">Technical support</p>
+                                <p>Use our dedicated support email to send your issues or suggestions. We are here to
+                                    help anytime:</p>
+                                <p class="font-weight-bold"><i>support@example.com</i></p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </div>
+</section>
