--- a/themes/default/layouts/index.hbs
+++ b/themes/default/layouts/index.hbs
@@ -1,12 +1,35 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="{{ site.lang }}">
 
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>{{ title }}</title>
+    <title>{{ title }} | {{ site.name }}</title>
+    <meta charset="{{ site.charset }}">
+
+    {{!-- Meta --}}
+    {{{ imports.header.meta }}}
+    {{!-- Meta End --}}
+
+    {{!-- Link --}}
+    {{{ imports.header.link }}}
+    {{!-- Link End --}}
+
+    {{!-- Script --}}
+    {{{ imports.header.script }}}
+    {{!-- Script End --}}
 </head>
 
-{{{ body }}}
+<body style="background-color: #fafbfe;">
+    {{> header }}
+
+    {{!-- Load Body --}}
+    {{{ body }}}
+    {{!-- Body End --}}
+
+    {{> footer}}
+
+    {{!-- Script --}}
+    {{{ imports.footer.script }}}
+    {{!-- Script End --}}
+</body>
 
 </html>
