--- a/themes/default/layouts/page.hbs
+++ b/themes/default/layouts/page.hbs
@@ -23,8 +23,8 @@
     {{> top-bar }}
     {{!-- Top Bar End --}}
 
-    {{!-- Website main header for brand logo and/or search bar. --}}
-    {{> primary-header }}
+    {{!-- Website secondary header for small brand logo and search bar. --}}
+    {{> secondary-header }}
     {{!-- Header End --}}
 
     {{!-- Navigation bar contains all website important links or categories. --}}
@@ -40,7 +40,7 @@
     {{!-- Bottom Bar End --}}
 
     {{!-- Website main footer --}}
-    {{> primary-footer}}
+    {{> secondary-footer}}
     {{!-- Footer End --}}
 
     {{!-- Script Tags (Footer Scripts) --}}
