--- a/themes/default/assets/css/system/styles.scss
+++ b/themes/default/assets/css/system/styles.scss
@@ -1,8 +1,12 @@
-@import url("https://fonts.googleapis.com/css2?family=Montserrat:ital,wght@0,400;0,500;0,600;0,700;0,800;0,900;1,400;1,500;1,600;1,700;1,800;1,900&family=Notable&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Playfair+Display:ital,wght@0,400;0,500;0,600;0,669;0,700;0,800;0,900;1,400;1,500;1,600;1,669;1,700;1,800;1,900&family=Ubuntu:ital,wght@0,300;0,400;0,500;0,700;1,300;1,400;1,500;1,700&display=swap");
 
 body {
   color: black;
-  font-family: "Montserrat", sans-serif;
+  font-family: "Ubuntu", sans-serif;
+}
+
+.text-dark {
+  color: black !important;
 }
 
 h1,
@@ -11,7 +15,7 @@ h3,
 h4,
 h5,
 h6 {
-  font-family: "Notable", sans-serif;
+  font-family: "Playfair Display", serif;
 }
 
 .card {
@@ -46,6 +50,22 @@ h6 {
   &:active,
   &:focus {
     background-color: #6000b9;
+    box-shadow: none;
+  }
+}
+
+.btn-secondary {
+  border-radius: 0;
+  background-color: #272c44;
+  border: 0;
+
+  &:hover {
+    background-color: #252a42;
+  }
+
+  &:active,
+  &:focus {
+    background-color: #1f243b;
     box-shadow: none;
   }
 }
